Cambios agregamos más información

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <p>
-        Hola compañeros, este es mi sitio WEB
+        Hola estimados todos, este es mi sitio WEB. Saludos a todos. 
     </p>
 
 </body>
